# comet-deprecaterd

./: .gitignore  license.md  meson.build  readme.md
include/comet/: hello.hpp
include/comet/base/: external.hpp  types.hpp
include/comet/events/: event.hpp  event_queue.hpp
include/comet/events/key_events/: key_event.hpp  key_pressed_event.hpp  key_released_event.hpp
include/comet/events/window_events/: window_close_event.hpp  window_event.hpp  window_resize_event.hpp
include/comet/exceptions/: exception.hpp
include/comet/graphics/: window.hpp
source/comet/: hello.cpp
source/comet/events/: event.cpp  event_queue.cpp
source/comet/events/key_events/: key_event.cpp  key_pressed_event.cpp  key_released_event.cpp
source/comet/events/window_events/: window_event.cpp  window_resize_event.cpp
source/comet/exceptions/: exception.cpp
source/comet/graphics/: window.cpp
tests/sandbox/: meson.build
tests/sandbox/source/: main.cpp
